samples/_failures_safe/1761785849_706045_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4270aa6.c: In function ‘main’:
./samples/SAFE/__tmp_e4270aa6.c:142:5: error: expected declaration or statement at end of input
  142 |     printf("Enter %zu elements for matrix B:\n", rows_b * cols_b);
      |     ^~~~~~
